@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-08-18T08:16:00Z",
+  "timestamp" : "2023-08-19T00:55:57Z",
   "count_outdated" : 447,
   "uniques_outdated" : 279,
-  "count" : 448,
-  "uniques" : 280,
+  "count" : 449,
+  "uniques" : 281,
   "clones" : [
     {
       "timestamp": "2023-08-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
