@@ -1,11 +1,11 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 2,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2023-08-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
